tests/compile_fail/floor_on_l_conn.stderr
error[E0277]: the trait bound `Conn<i32, i32>: ConnR` is not satisfied
  --> tests/compile_fail/floor_on_l_conn.rs:10:38
   |
10 |     let _ = connections::conn::floor(&L_CONN, 0_i32);
   |             ------------------------ ^^^^^^^ the trait `ConnR` is not implemented for `Conn<i32, i32>`
   |             |
   |             required by a bound introduced by this call
   |
   = help: the trait `ConnR` is implemented for `Conn<A, B, R>`
note: required by a bound in `connections::conn::floor`
  --> src/conn.rs
   |
   | pub fn floor<T, A, B>(t: &T, a: A) -> B
   |        ----- required by a bound in this function
   | where
   |     T: ?Sized + ConnR<A = A, B = B>,
   |                 ^^^^^^^^^^^^^^^^^^^ required by this bound in `floor`
